--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<github.global.server>github</github.global.server>
 	</properties>
 
 	<dependencies>
@@ -43,4 +44,64 @@
 			<version>2.13.0</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<!--打包插件 -->
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/repository</altDeploymentRepository>
+				</configuration>
+			</plugin>
+
+			<!--源码 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!--github上传插件,用于修改后的发布,执行 mvn clean deploy 自动打包上传到github -->
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<version>0.12</version>
+				<configuration>
+					<message>Maven artifacts for ${project.version}</message>
+					<noJekyll>true</noJekyll>
+					<!--本地jar地址 -->
+					<outputDirectory>${project.build.directory}/repository</outputDirectory>
+					<!--分支 -->
+					<branch>refs/heads/master</branch>
+					<merge>true</merge>
+					<includes>
+						<include>**/*</include>
+					</includes>
+					<!--对应github上创建的仓库名称 name -->
+					<repositoryName>atm</repositoryName>
+					<!--github 仓库所有者 不是账号 -->
+					<repositoryOwner>herowzz</repositoryOwner>
+				</configuration>
+
+				<executions>
+					<execution>
+						<goals>
+							<goal>site</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
