--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.github.herowzz</groupId>
 	<artifactId>atm</artifactId>
-	<version>0.1.2.RELEASE</version>
+	<version>0.1.3.SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>atm</name>
